# LMS_System

./: .env.sample  README.md  cov-rep.txt  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  users.json
LMS_System/: asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
LMS_System/LMS_System/: asgi.py  settings.py
materials/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lessons_owner.py  0003_subscription.py  0004_remove_subscription_name.py  0005_course_amount_subscription_amount_subscription_link_and_more.py  0006_subscription_product.py  0007_remove_subscription_link_remove_subscription_product_and_more.py  0008_remove_amounts_amount_remove_amounts_subscription_and_more.py  0009_remove_amounts_course_amounts_amount_and_more.py  0010_course_last_update_date.py  0011_subscription_amount.py
users/: models.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  0003_payments.py  0004_alter_payments_options.py  0005_alter_user_last_login.py
